--- a/Api/package.json
+++ b/Api/package.json
@@ -13,6 +13,7 @@
   "type": "commonjs",
   "dependencies": {
     "express": "^5.1.0",
+    "ioredis": "^5.6.1",
     "ws": "^8.18.2"
   },
   "devDependencies": {
