--- a/web/package.json
+++ b/web/package.json
@@ -14,12 +14,17 @@
     "@solana/wallet-adapter-react-ui": "^0.9.38",
     "@solana/wallet-adapter-wallets": "^0.19.36",
     "@solana/web3.js": "^1.98.2",
+    "clsx": "^2.1.1",
     "d3": "^7.9.0",
+    "motion": "^12.10.0",
     "next": "15.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.2.0",
     "vis-data": "^7.1.9",
-    "vis-network": "^9.1.9"
+    "vis-network": "^9.1.9",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
