--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@solana/web3.js": "^1.98.2",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
+    "lucide-react": "^0.508.0",
     "motion": "^12.10.0",
     "next": "15.3.1",
     "react": "^19.1.0",
@@ -35,6 +36,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "pino-pretty": "^13.0.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
