feat: add path mappings for store, types, and action directories in tsconfig

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -25,6 +25,9 @@
       "@lib/*": ["./lib/*"],
       "@styles/*": ["./styles/*"],
       "@public/*": ["./public/*"],
+      "@store/*":["./store/*"],
+      "@types/*":["./types/*"],
+      "@action/*":["./action/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
