--- a/web/package.json
+++ b/web/package.json
@@ -21,16 +21,68 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-resizable-panels": "^3.0.1",
     "tailwind-merge": "^3.2.0",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__generator": "^7.27.0",
+    "@types/babel__template": "^7.4.4",
+    "@types/babel__traverse": "^7.20.7",
+    "@types/connect": "^3.4.38",
     "@types/d3": "^7.4.3",
+    "@types/d3-array": "^3.2.1",
+    "@types/d3-axis": "^3.0.6",
+    "@types/d3-brush": "^3.0.6",
+    "@types/d3-chord": "^3.0.6",
+    "@types/d3-color": "^3.1.3",
+    "@types/d3-contour": "^3.0.6",
+    "@types/d3-delaunay": "^6.0.4",
+    "@types/d3-dispatch": "^3.0.6",
+    "@types/d3-drag": "^3.0.7",
+    "@types/d3-dsv": "^3.0.7",
+    "@types/d3-ease": "^3.0.2",
+    "@types/d3-fetch": "^3.0.7",
+    "@types/d3-force": "^3.0.10",
+    "@types/d3-format": "^3.0.4",
+    "@types/d3-geo": "^3.1.0",
+    "@types/d3-hierarchy": "^3.1.7",
+    "@types/d3-interpolate": "^3.0.4",
+    "@types/d3-path": "^3.1.1",
+    "@types/d3-polygon": "^3.0.2",
+    "@types/d3-quadtree": "^3.0.6",
+    "@types/d3-random": "^3.0.3",
+    "@types/d3-scale": "^4.0.9",
+    "@types/d3-scale-chromatic": "^3.1.0",
+    "@types/d3-selection": "^3.0.11",
+    "@types/d3-shape": "^3.1.7",
+    "@types/d3-time": "^3.0.4",
+    "@types/d3-time-format": "^4.0.3",
+    "@types/d3-timer": "^3.0.2",
+    "@types/d3-transition": "^3.0.9",
+    "@types/d3-zoom": "^3.0.8",
+    "@types/geojson": "^7946.0.16",
+    "@types/graceful-fs": "^4.1.9",
+    "@types/istanbul-lib-coverage": "^2.0.6",
+    "@types/istanbul-lib-report": "^3.0.3",
+    "@types/istanbul-reports": "^3.0.4",
+    "@types/json-schema": "^7.0.15",
+    "@types/json5": "^2.2.0",
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.12",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/stack-utils": "^2.0.3",
+    "@types/trusted-types": "^2.0.7",
+    "@types/uuid": "^10.0.0",
+    "@types/w3c-web-usb": "^1.0.10",
+    "@types/web": "^0.0.233",
+    "@types/ws": "^8.18.1",
+    "@types/yargs": "^17.0.33",
+    "@types/yargs-parser": "^21.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "eslint-plugin-import": "^2.31.0",
