--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
-    "editor.formatOnSave": true,
-    "files.exclude": {
-      "**/node_modules": true,
-      "**/.next": true
-    },
-    "eslint.enable": true,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
-  
+  "editor.formatOnSave": true,
+  "files.exclude": {
+    "**/node_modules": true,
+    "**/.next": true
+  },
+  "eslint.enable": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "doki.background.enabled": true
+}
