--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,9 @@
     "@tailwindcss/postcss": "^4.1.6",
     "@types/d3": "^7.4.3",
     "@types/react": "^19",
-    "lucide-react": "^0.508.0"
+    "autoprefixer": "^10.4.21",
+    "lucide-react": "^0.508.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7"
   }
 }
